ribbit/tests/ui/arbitrary_nonzero.stderr
error: Nonzero arbitrary sizes are currently unsupported
 --> tests/ui/arbitrary_nonzero.rs:1:27
  |
1 | #[ribbit::pack(size = 15, nonzero)]
  |                           ^^^^^^^
