ribbit/tests/ui/arbitrary_nonzero.rs
#[ribbit::pack(size = 15, nonzero)]
struct Bad {
    a: u7,
    b: NonZeroU8,
}

fn main() {}
